# enpt

./: .coveragerc  .gitattributes  .gitignore  .gitlab-ci.yml  .zenodo.json  AUTHORS.rst  CITATION  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  test.json  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  about.rst  algorithm_descriptions.rst  conf.py  development.rst  enpt.rst  index.rst  installation.rst  make.bat  modules.rst  scripts.rst  tutorial.rst  usage.rst
docs/_static/: wider_theme.css
docs/api/: modules.rst
docs/software_design/: EnPT_software_design.xmind
enpt/: __init__.py  cli.py  enpt.py  enpt_OLD.py  version.py
enpt/execution/: __init__.py  controller.py
enpt/io/: EnMAPL1BProduct.py  __init__.py  l1b_reader.py  reader.py
enpt/model/: __init__.py  images.py  metadata.py  srf.py
enpt/model/images/: __init__.py  baseclasses.py  image_baseclasses.py  images_mapgeo.py  images_sensorgeo.py  mapgeo.py  sensorgeo.py
enpt/model/metadata/: __init__.py  mapgeo.py  metadata_mapgeo.py  metadata_sensorgeo.py
enpt/options/: __init__.py  config.py  isofit_config_default.json  isofit_surface_20240103_REE.json  isofit_surface_default.json  options_default.json  options_schema.py
enpt/processors/: __init__.py
enpt/processors/atmospheric_correction/: __init__.py  _isofit_downloads.py  _isofit_enmap.py  _isofit_lut_preparation.py  atmospheric_correction.py
enpt/processors/cloud_screening/: __init__.py  cloud_screening.py
enpt/processors/dead_pixel_correction/: __init__.py  dead_pixel_correction.py
enpt/processors/dem_preprocessing/: __init__.py  dem_download.py  dem_preprocessing.py
enpt/processors/image_correction/: __init__.py  image_correction.py
enpt/processors/orthorectification/: __init__.py  orthorectification.py
enpt/processors/radiometric_transform/: __init__.py  radiometric_transform.py
enpt/processors/spatial_module/: __init__.py  spatial_module.py
enpt/processors/spatial_optimization/: __init__.py  spatial_optimization.py
enpt/processors/spatial_transform/: __init__.py  spatial_transform.py
enpt/resources/EnMAP_Sensor/: parametric_noise.txt
enpt/resources/earth_sun_distance/: Earth_Sun_distances_per_day_edited.csv  Earth_Sun_distances_per_day_edited__1980_2030.csv
enpt/resources/solar_irradiance/: SUNp1fontenla__350-2500nm_@0.1nm_converted.txt
enpt/utils/: __init__.py  logging.py  path_generator.py
examples/notebooks/: radiometric_transform_example.ipynb
tests/: __init__.py  test_cli_parser.py  test_config.py  test_controller.py  test_dead_pixel_correction.py  test_dem_download.py  test_dem_preprocessing.py  test_enpt.py  test_images_sensorgeo.py  test_isofit_enmap.py  test_l1b_reader.py  test_orthorectification.py  test_radiometric_transform.py  test_spatial_optimization.py  test_spatial_transform.py  test_srf.py
tests/data/: DLR_L2A_DEM_UTM32.hdr  ENMAP01-____L1B-DT000400126_20170218T110115Z_002_V000204_20200206T182719Z__DEM_ASTER.bsq  ENMAP01-____L1B-DT000400126_20170218T110115Z_002_V000204_20200206T182719Z__DEM_ASTER.hdr  ENMAP01-____L1B-DT000400126_20170218T110115Z_002_V000204_20200206T182719Z__tile2__DEM_ASTER.hdr  Landsat8__500x500x2.bsq  Landsat8__500x500x2.hdr  T30TXQ_20170218T110111_B05__sub.tif  dem_map_geo.bsq  dem_map_geo.hdr  rpc_coeffs_B200.pkl
tests/gitlab_CI_docker/: before_script.sh  build_enpt_testsuite_image.sh
tests/gitlab_CI_docker/context/: enpt.docker  enpt_ci.docker  environment_enmapbox.yml  environment_enmapbox_enpt.yml  environment_enpt.yml  environment_enpt_dev.yml  environment_enpt_enmapbox_requirements.yml  environment_enpt_full.yml  environment_enpt_full_dev.yml  environment_enpt_polymer.yml
